--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anmol's Professional To-Do List</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         /* Reset and Base Styles */
         * {
@@ -173,6 +174,13 @@
             background-color: var(--button-hover-bg);
         }
 
+        /* Filter Section */
+        .filter-section {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
         /* Task List */
         ul {
             list-style: none;
@@ -320,6 +328,36 @@
 
             .task-actions button {
                 font-size: 18px;
+                padding: 10px;
+            }
+
+            .task-info .task-text {
+                font-size: 16px;
+            }
+
+            .task-info .task-meta {
+                font-size: 10px;
+            }
+
+            /* Increase the size of checkboxes and buttons for better touch targets */
+            .task-details input[type="checkbox"] {
+                transform: scale(1.5);
+                margin-bottom: 10px;
+            }
+
+            .toggle-switch {
+                width: 60px;
+                height: 30px;
+            }
+
+            .toggle-switch::after {
+                width: 26px;
+                height: 26px;
+            }
+
+            /* Simplify the layout by reducing unnecessary gaps */
+            .task-details {
+                gap: 10px;
             }
         }
     </style>
@@ -392,7 +430,14 @@
         }
 
         // Call displayQuote on page load
-        window.onload = displayQuote;
+        window.onload = function() {
+            displayQuote();
+            registerServiceWorker();
+            requestNotificationPermission();
+            subscribeUser();
+            renderTasks();
+            setUpMidnightReminder();
+        }
 
         // Theme Toggle
         const themeSwitch = document.getElementById('themeSwitch');
@@ -502,7 +547,7 @@
             const today = new Date();
             today.setHours(0,0,0,0); // Reset time
 
-            // Optional: Sort tasks by priority (High to Low) and due date
+            // Sort tasks by priority (High to Low) and due date
             const priorityOrder = { 'high': 1, 'medium': 2, 'low': 3 };
             const sortedTasks = tasks.sort((a, b) => {
                 if (priorityOrder[a.priority] !== priorityOrder[b.priority]) {
@@ -615,36 +660,124 @@
                 if (notificationTime > 0) {
                     setTimeout(() => {
                         showNotification(`Task Due Soon: ${task.text}`, `Your task "${task.text}" is due at ${new Date(task.dueDate).toLocaleTimeString()}.`);
+                        // Optionally, send push notification via backend
+                        fetch('http://localhost:4000/sendNotification', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                            body: JSON.stringify({
+                                title: `Task Due Soon: ${task.text}`,
+                                body: `Your task "${task.text}" is due at ${new Date(task.dueDate).toLocaleTimeString()}.`
+                            })
+                        });
                     }, notificationTime);
                 } else if (timeDiff > 0 && timeDiff <= (60 * 60 * 1000)) {
                     // If less than 1 hour remains, notify immediately
                     showNotification(`Task Due Soon: ${task.text}`, `Your task "${task.text}" is due at ${new Date(task.dueDate).toLocaleTimeString()}.`);
+                    // Optionally, send push notification via backend
+                    fetch('http://localhost:4000/sendNotification', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({
+                            title: `Task Due Soon: ${task.text}`,
+                            body: `Your task "${task.text}" is due at ${new Date(task.dueDate).toLocaleTimeString()}.`
+                        })
+                    });
                 }
             } else {
-                // Task is overdue, you can choose to notify immediately or handle differently
+                // Task is overdue, notify immediately
                 showNotification(`Task Overdue: ${task.text}`, `Your task "${task.text}" was due on ${new Date(task.dueDate).toLocaleDateString()}.`);
+                // Optionally, send push notification via backend
+                fetch('http://localhost:4000/sendNotification', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        title: `Task Overdue: ${task.text}`,
+                        body: `Your task "${task.text}" was due on ${new Date(task.dueDate).toLocaleDateString()}.`
+                    })
+                });
             }
         }
 
         // Function to show a browser notification
         function showNotification(title, body) {
             if (Notification.permission === "granted") {
-                new Notification(title, { body: body });
+                navigator.serviceWorker.getRegistration().then(reg => {
+                    reg.showNotification(title, {
+                        body: body,
+                        icon: 'icons/icon-192x192.png',
+                        badge: 'icons/icon-192x192.png'
+                    });
+                });
             }
         }
 
-        // Request notification permission on page load
-        window.onload = function() {
-            displayQuote();
-            if (Notification.permission !== "granted" && Notification.permission !== "denied") {
+        // Service Worker Registration
+        function registerServiceWorker() {
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('service-worker.js')
+                    .then(registration => {
+                        console.log('Service Worker registered with scope:', registration.scope);
+                    })
+                    .catch(error => {
+                        console.error('Service Worker registration failed:', error);
+                    });
+            }
+        }
+
+        // Request Notification Permission
+        function requestNotificationPermission() {
+            if ('Notification' in window && navigator.serviceWorker) {
                 Notification.requestPermission().then(permission => {
-                    if (permission === "granted") {
-                        console.log("Notification permission granted.");
+                    if (permission === 'granted') {
+                        console.log('Notification permission granted.');
                     }
                 });
             }
-            renderTasks();
-            setUpMidnightReminder();
+        }
+
+        // Push Subscription (Replace 'YOUR_PUBLIC_VAPID_KEY' with your actual VAPID public key)
+        async function subscribeUser() {
+            const registration = await navigator.serviceWorker.ready;
+            try {
+                const subscription = await registration.pushManager.subscribe({
+                    userVisibleOnly: true,
+                    applicationServerKey: urlBase64ToUint8Array('YOUR_PUBLIC_VAPID_KEY')
+                });
+                console.log('User is subscribed:', subscription);
+
+                // Send subscription to the server
+                await fetch('http://localhost:4000/subscribe', {
+                    method: 'POST',
+                    body: JSON.stringify(subscription),
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                });
+            } catch (error) {
+                console.error('Failed to subscribe the user: ', error);
+            }
+        }
+
+        // Utility function to convert VAPID key
+        function urlBase64ToUint8Array(base64String) {
+            const padding = '='.repeat((4 - base64String.length % 4) % 4);
+            const base64 = (base64String + padding)
+                .replace(/\-/g, '+')
+                .replace(/_/g, '/');
+        
+            const rawData = window.atob(base64);
+            const outputArray = new Uint8Array(rawData.length);
+        
+            for (let i = 0; i < rawData.length; ++i) {
+                outputArray[i] = rawData.charCodeAt(i);
+            }
+            return outputArray;
         }
 
         // Function to set up midnight reminder
@@ -690,11 +823,9 @@
         // Function to filter and render tasks based on filter selection
         document.getElementById("filterSelect").addEventListener("change", renderTasks);
 
-        // Function to render tasks initially and whenever tasks change
-        // Already defined above
-
         // Initial render
-        renderTasks();
+        // Already called in window.onload
+        // renderTasks();
 
         // Optional: Add task on Enter key press
         document.getElementById("taskInput").addEventListener("keypress", function(e) {
