--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anmol's Professional To-Do List</title>
+    <title>Anmol's Productivity Hub</title>
+    <!-- Google Fonts for Enhanced Typography -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         /* Reset and Base Styles */
         * {
@@ -13,9 +15,9 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f4f8;
-            color: #333333;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f5f7fa;
+            color: #2c3e50;
             display: flex;
             justify-content: center;
             align-items: flex-start;
@@ -28,27 +30,29 @@
             width: 100%;
             max-width: 600px;
             background: #ffffff;
-            padding: 20px 25px;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            padding: 25px 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
 
         /* Header */
         h1 {
             text-align: center;
-            color: #2c3e50;
-            margin-bottom: 15px;
-            font-size: 28px;
+            color: #34495e;
+            margin-bottom: 20px;
+            font-size: 26px;
+            font-weight: 700;
         }
 
-        /* Motivational Quote */
+        /* Inspirational Quote */
         .quote {
             text-align: center;
             font-style: italic;
             color: #7f8c8d;
-            margin-bottom: 20px;
-            min-height: 40px;
+            margin-bottom: 25px;
+            min-height: 50px;
             transition: opacity 0.5s ease-in-out;
+            font-size: 16px;
         }
 
         /* Input Section */
@@ -131,7 +135,7 @@
             align-items: center;
             justify-content: space-between;
             background-color: #ffffff;
-            padding: 15px 10px;
+            padding: 12px 10px;
             margin-bottom: 10px;
             border-radius: 5px;
             border-left: 5px solid #3498db;
@@ -167,7 +171,7 @@
             align-items: center;
             gap: 15px;
             flex: 1;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
         }
 
         .task-details input[type="checkbox"] {
@@ -179,11 +183,15 @@
             display: flex;
             flex-direction: column;
             flex: 1;
+            overflow: hidden;
         }
 
         .task-info .task-text {
             font-size: 16px;
             color: #2c3e50;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .task-info .task-meta {
@@ -233,15 +241,24 @@
                 width: 100%;
             }
 
-            .task-details {
+            .filter-section {
                 flex-direction: column;
                 align-items: flex-start;
+            }
+
+            .filter-section select {
+                width: 100%;
+            }
+
+            .task-details {
+                flex-direction: row;
+                gap: 10px;
             }
 
             .task-actions {
                 justify-content: flex-end;
                 width: 100%;
-                margin-top: 10px;
+                margin-top: 5px;
             }
 
             .task-actions button {
@@ -261,14 +278,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Anmol's To-Do List</h1>
-        <div class="quote" id="quote">Loading motivational quote...</div>
+        <h1>Welcome to Anmol's Productivity Hub</h1>
+        <div class="quote" id="quote">Loading inspirational quote...</div>
         <div class="input-section">
             <input type="text" id="taskInput" placeholder="Enter a new task">
             <button onclick="addTask()">Add Task</button>
         </div>
         <div class="filter-section">
-            <label for="filterSelect">Filter by:</label>
+            <label for="filterSelect">Filter:</label>
             <select id="filterSelect" onchange="renderTasks()">
                 <option value="all">All Tasks</option>
                 <option value="completed">Completed</option>
@@ -284,16 +301,16 @@
 
         // Array of motivational quotes
         const quotes = [
-            "Believe you can and you're halfway there. – Theodore Roosevelt",
-            "The only way to do great work is to love what you do. – Steve Jobs",
-            "Don't watch the clock; do what it does. Keep going. – Sam Levenson",
-            "Keep your face always toward the sunshine—and shadows will fall behind you. – Walt Whitman",
             "The future depends on what you do today. – Mahatma Gandhi",
-            "It does not matter how slowly you go as long as you do not stop. – Confucius",
             "Start where you are. Use what you have. Do what you can. – Arthur Ashe",
-            "The harder you work for something, the greater you'll feel when you achieve it.",
+            "The only way to do great work is to love what you do. – Steve Jobs",
+            "Believe you can and you're halfway there. – Theodore Roosevelt",
+            "Don't watch the clock; do what it does. Keep going. – Sam Levenson",
+            "Success is not for the lazy.",
             "Dream it. Wish it. Do it.",
-            "Success is not for the lazy."
+            "The harder you work for something, the greater you'll feel when you achieve it.",
+            "Keep your face always toward the sunshine—and shadows will fall behind you. – Walt Whitman",
+            "It does not matter how slowly you go as long as you do not stop. – Confucius"
         ];
 
         // Function to display the daily motivational quote
